# VoiceCloningPipelineServer

./: .gitignore  README.md  main.py  pyproject.toml  streamlit_app.py
index-tts/: pyproject.toml
output/: 2dbc4f20-eebc-4c88-8465-19b7da61eef4_transcript.json  transcript.json
src/config/: logger_config.py  settings.py
src/services/: download_video.py  generate_audio.py  overlay_audio_on_video.py  transcribe_video.py
