[project]
name = "voicecloningpipelineserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "indextts",
    "librosa>=0.11.0",
    "pydantic-settings>=2.11.0",
    "streamlit>=1.22.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "whisperx>=3.7.4",
    "yt-dlp>=2025.10.22",
]

[tool.uv.workspace]
members = [
    "index-tts",
]

[tool.uv.sources]
indextts = { workspace = true }
